--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -7170,7 +7170,7 @@
   },
   "src_dot_siteSettings_dot_components_dot_SiteCheckoutSettingsCard_dot_checkoutLineLimit": {
     "context": "input label",
-    "string": "Checkout line limit."
+    "string": "Checkout line limit"
   },
   "src_dot_siteSettings_dot_components_dot_SiteCheckoutSettingsCard_dot_reservedStock": {
     "context": "title",
