--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6103,7 +6103,7 @@
   },
   "src_dot_products_dot_components_dot_ProductList_dot_updatedAt": {
     "context": "product updated at",
-    "string": "Updated At"
+    "string": "Last updated"
   },
   "src_dot_products_dot_components_dot_ProductList_dot_willBePublished": {
     "context": "product publication date",
